[package]
name = "gl33"
description = "Bindings to OpenGL 3.3 + GL_KHR_debug"
version = "0.2.0-alpha.0"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
repository = "https://github.com/Lokathor/gl33"
license = "Zlib OR Apache-2.0 OR MIT"
keywords = ["GL", "OpenGL", "graphics", "gamedev"]
categories = ["external-ffi-bindings", "graphics", "no-std", "rendering::graphics-api"]

[dependencies]
chlorine = "1"

[dev-dependencies]
fermium = { version = "20014" }
